--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,28 @@
 <resources>
-    <string name="app_name">mandysax</string>
+    <string name="app_name">MandySa Music</string>
+    <string name="mobile_phone">手机号</string>
+    <string name="password">密码</string>
+    <string name="login">登录</string>
+    <string name="browser">浏览</string>
+    <string name="new_song_express">新歌速递</string>
+    <string name="recommended_playlist">推荐歌单</string>
+    <string name="recommended_song">推荐歌曲</string>
+    <string name="playlist">歌单</string>
+    <string name="database">资料库</string>
+    <string name="search">搜索</string>
+    <string name="search_hint">输入歌曲或歌手名称</string>
+    <string name="me">我的</string>
+    <string name="not_played">未播放</string>
+    <string name="you_are_offline">你已离线</string>
+    <string name="check_the_network">请检查网络后点击重试</string>
+    <string name="error">没有更多了</string>
+    <string name="search_history">搜索历史</string>
+    <string name="add_database">添加到资料库</string>
+    <string name="my_playlist">我的歌单</string>
+    <string name="cd_cover">封面</string>
+    <string name="cd_pause_play">暂停</string>
+    <string name="cd_next_song">下一曲</string>
+    <string name="music">单曲</string>
+    <string name="singer">歌手</string>
+
 </resources>
