--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">MandySa Music</string>
     <string name="title_home">主页</string>
     <string name="title_search">搜索</string>
+
+    <string name="recommended_playlist">推荐歌单</string>
+    <string name="recommended_song">推荐歌曲</string>
 </resources>
