修复AndroidViewModel 优化项目结构

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
 
     <string name="recommended_playlist">推荐歌单</string>
     <string name="recommended_song">推荐歌曲</string>
+
+    <string name="playlist">歌单</string>
 </resources>
