--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="recommended_song">推荐歌曲</string>
 
     <string name="playlist">歌单</string>
+    <string name="search_hint">输入歌曲或歌手名称</string>
 </resources>
