--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
 
     <string name="playlist">歌单</string>
     <string name="search_hint">输入歌曲或歌手名称</string>
+    <string name="me">我的</string>
 </resources>
