--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
 
+    <string name="CHANNEL_ID">media channel</string>
+    <string name="CHANNEL_NAME">媒体控制器</string>
+    <string name="CHANNEL_DESCRIPTION">播放控制</string>
+
     <string name="app_name">MandySa Music</string>
     <string name="home">主页</string>
     <string name="search">搜索</string>
@@ -11,13 +15,14 @@
     <string name="playlist">歌单</string>
     <string name="search_hint">输入歌曲或歌手名称</string>
 
-    <string name="CHANNEL_ID">media channel</string>
-    <string name="CHANNEL_NAME">媒体控制器</string>
-    <string name="CHANNEL_DESCRIPTION">播放控制</string>
-
     <string name="empty">什么都没有</string>
     <string name="you_are_offline">你已离线</string>
     <string name="check_the_network">请检查网络后点击重试</string>
 
+    <string name="user_manager">多账号管理</string>
+
+    <string name="user">账号</string>
+    <string name="password">密码</string>
+    <!--占位符-->
     <string name="test">test</string>
 </resources>
