--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,5 @@
 
     <string name="login">登录</string>
     <string name="cancel">取消</string>
-    <string name="welcome">Hello\nwelcome to us!</string>
-    <string name="welcome_login">Log in to use all features of mandysa music</string>
+    <string name="welcome">使用云音乐账号登录</string>
 </resources>
