--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="login">登录</string>
     <string name="cancel">取消</string>
     <string name="welcome">使用云音乐账号登录</string>
+    <string name="recommended_newsong">新歌</string>
 </resources>
