--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="login">登录</string>
     <string name="cancel">取消</string>
     <string name="welcome">使用云音乐账号登录</string>
-    <string name="recommended_newsong">新歌</string>
+    <string name="recommended_newsong">推荐新歌</string>
+    <string name="toplist">排行榜</string>
 </resources>
