--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="search">搜索</string>
     <string name="me">我的</string>
 
-    <string name="recommended_playlist">推荐歌单</string>
-    <string name="recommended_song">推荐歌曲</string>
+    <string name="recommend_playlist">推荐歌单</string>
+    <string name="recommend_song">推荐歌曲</string>
     <string name="me_playlist">我的歌单</string>
 
     <string name="playlist">歌单</string>
@@ -29,6 +29,13 @@
     <string name="login">登录</string>
     <string name="cancel">取消</string>
     <string name="welcome">使用云音乐账号登录</string>
-    <string name="recommended_newsong">推荐新歌</string>
-    <string name="toplist">排行榜</string>
+    <string name="recommend_newsong">推荐新歌</string>
+
+    <string name="playlist_square">歌单广场</string>
+
+    <string name="recommend">推荐</string>
+
+    <string name="music_hall">音乐馆</string>
+
+    <string name="ranking">排行</string>
 </resources>
