--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
 
     <string name="app_name">MandySa Music</string>
     <string name="home">主页</string>
-    <string name="search">搜索</string>
     <string name="me">我的</string>
 
     <string name="recommend_playlist">推荐歌单</string>
@@ -27,9 +26,8 @@
     <string name="test">test</string>
 
     <string name="login">登录</string>
-    <string name="cancel">取消</string>
     <string name="welcome">使用云音乐账号登录</string>
-    <string name="recommend_newsong">推荐新歌</string>
+    <string name="new_song_express">新歌速递</string>
 
     <string name="playlist_square">歌单广场</string>
 
